Fixed hamburger menu spacing and added footer icons

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -31,6 +31,7 @@
   .nav-mobile-link {
     color: black;
     text-decoration: none;
+    text-align: left;
   }
 
   .nav-mobile-link:visited {
